K8s/Dev/wepromolink_dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staticpage-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staticpage-app
  template:
    metadata:
      labels:
        app: staticpage-app
    spec:
      containers:
        - name: staticpage-container
          image: cod4it/wepromolink.staticpage:$MICROSERVICE_STATICPAGE
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-app
  template:
    metadata:
      labels:
        app: backoffice-app
    spec:
      containers:
        - name: backoffice-container
          image: cod4it/wepromolink.backoffice:$MICROSERVICE_BACKOFFICE
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btcpayworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btcpayworker-app
  template:
    metadata:
      labels:
        app: btcpayworker-app
    spec:
      containers:
        - name: btcpayworker-container
          image: cod4it/wepromolink.btcpayworker:$MICROSERVICE_BTCPAYWORKER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geolocationworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geolocationworker-app
  template:
    metadata:
      labels:
        app: geolocationworker-app
    spec:
      containers:
        - name: geolocationworker-container
          image: cod4it/wepromolink.geolocationworker:$MICROSERVICE_GEOLOCATIONWORKER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notiworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notiworker-app
  template:
    metadata:
      labels:
        app: notiworker-app
    spec:
      containers:
        - name: notiworker-container
          image: cod4it/wepromolink.notiworker:$MICROSERVICE_NOTIWORKER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller-app
  template:
    metadata:
      labels:
        app: controller-app
    spec:
      containers:
        - name: controller-container
          image: cod4it/wepromolink.controller:$MICROSERVICE_CONTROLLER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statsworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statsworker-app
  template:
    metadata:
      labels:
        app: statsworker-app
    spec:
      containers:
        - name: statsworker-container
          image: cod4it/wepromolink.statsworker:$MICROSERVICE_STATWORKER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hitworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hitworker-app
  template:
    metadata:
      labels:
        app: hitworker-app
    spec:
      containers:
        - name: hitworker-container
          image: cod4it/wepromolink.hitworker:$MICROSERVICE_HITWORKER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stripeworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stripeworker-app
  template:
    metadata:
      labels:
        app: stripeworker-app
    spec:
      containers:
        - name: stripeworker-container
          image: cod4it/wepromolink.stripeworker:$MICROSERVICE_STRIPEWORKER
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi-app
  template:
    metadata:
      labels:
        app: webapi-app
    spec:
      containers:
        - name: webapi-container
          image: cod4it/wepromolink:$MICROSERVICE_WEPROMOLINK
          ports:
            - containerPort: 80
          volumeMounts:
            - name: firebase-admin-volume
              mountPath: /app/secrets
      volumes:
        - name: firebase-admin-volume
          secret:
            secretName: firebase-admin-secret

---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
spec:
  selector:
    app: webapi-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
    - port: 443
      protocol: TCP
      targetPort: 443
      name: https
  type: ClusterIP  # Cambia esto según el tipo de servicio que desees
---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service
spec:
  selector:
    app: backoffice-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
    - port: 443
      protocol: TCP
      targetPort: 443
      name: https
  type: ClusterIP  # Cambia esto según el tipo de servicio que desees
---
apiVersion: v1
kind: Service
metadata:
  name: staticpage-service
spec:
  selector:
    app: staticpage-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
    - port: 443
      protocol: TCP
      targetPort: 443
      name: https
  type: ClusterIP  # Cambia esto según el tipo de servicio que desees
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/whitelist-source-range: "170.75.168.146/32"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx  # Especifica el nombre del controlador de Ingress que debe manejar las reglas definidas en este Ingress
  tls:
  - hosts:
    - dev.api.wepromolink.com
    secretName: api-wepromolink-tls
  - hosts:
    - admin.api.wepromolink.com
    secretName: admin-wepromolink-tls
  - hosts:
    - dev.wepromolink.io
    secretName: wepromolink-io-tls
  - hosts:
    - '*.wepromolink.com'
    secretName: wildcard-com-tls
  rules:
    - host: dev.api.wepromolink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi-service
                port:
                  number: 80
    - host: admin.api.wepromolink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backoffice-service
                port:
                  number: 80
    - host: dev.wepromolink.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi-service
                port:
                  number: 80
    - host: '*.wepromolink.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staticpage-service
                port:
                  number: 80
